[tool.poetry]
name = "climber-count"
version = "0.1.0"
description = "An app to track the number of climbers in gyms around London"
authors = ["keepfloyding <andris.piebalgs@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
influxdb = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.6b0"
flake8 = "^3.9.2"
flake8-bandit = "^2.1.2"
isort = "^5.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
